--- a/MyWebsite/css/sheet.css
+++ b/MyWebsite/css/sheet.css
@@ -5,7 +5,7 @@
             background-position: center center;*/
             line-height:650px;
 			width: 100%-50px;
-	    	height: 45vw;
+/* 	    	height: 45vw; */
 			/*border:5px solid black;*/
 			margin:2% 2%;
 	    	background: #8e68ff;
@@ -18,7 +18,7 @@
 		    font-size: 150%;
         }
 .content{
-	padding-top: 15%;
+	padding: 15%;
 
 }
 .content h1{
