--- a/MyWebsite/css/sheet.css
+++ b/MyWebsite/css/sheet.css
@@ -5,22 +5,24 @@
             background-position: center center;*/
             line-height:650px;
 			width: 100%-50px;
-/* 	    	height: 45vw; */
+	    	height: 45vw;
 			/*border:5px solid black;*/
 			margin:2% 2%;
 	    	background: #8e68ff;
 		    background-image: url('../imgs/welcome01.jpg');
 		    background-repeat: no-repeat;
+		    background-position: center;
 		    color:#FFFFFF;
 		    text-align: center;
 		    background-size: cover;
 		    margin-bottom:25px;
-		    font-size: 150%;
+		    font-size: 2rem;
         }
 .content{
-	padding: 5%;
+	padding: 3rem;
 
 }
 .content h1{
-	margin: 2em 0;
+	margin: 2rem 0;
+	font-size: 3rem;
 }
