--- a/MyWebsite/css/sheet.css
+++ b/MyWebsite/css/sheet.css
@@ -13,11 +13,7 @@ body{
 	min-height: 50vw;
 	border:1px solid black round;
 	margin:2% auto 5%;
-	background: #8e68ff;
-    background-image: url('../imgs/welcome01.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    color:#FFFFFF;
+    color: #FFF;
     text-align: center;
     background-size: cover;
     margin-bottom:25px;
@@ -25,18 +21,54 @@ body{
     padding: 10% 2% ;
 	line-height: 3rem;	
 }
- 
-
+.article{
+	background: #f0f0f0;
+	background: #f0f0f0 url('../imgs/DishAntenna.jpg');
+	
+}
+.content{
+	z-index: 10;
+}
 
 .content h1{
 	margin: 0rem 0 4rem;
-	font-size: 3rem;
+	font-size: 2.2em;
+	box-shadow: 300;
 }
 .content p{
 	margin: 2rem 0;
 	font-size: 1.5rem;
 	
 }
-.WhatIdo{
+.date{
+	font-size: 1.5rem;
+}
+section{
+	border-top:3px dotted #b3b3bb33;
+	margin-bottom:2rem;
+	line-height:2;
+}
 
+section p{
+	font-size: 1.25em;
+}
+section h2{
+	font-size: 2.4em;
+}
+.block{
+	padding: 17px;
+}
+.artclimg{
+	max-width: 0 auto;
+	border: #b0b0b0 solid 0.5px;
+	border-radius: 12.5%;
+	float: left;
+}
+@media (max-width:768px){
+	.artitle{
+		text-align :center;
+	}
+	.block {
+		margin: auto 5%;
+	}
 }
